tests/derive/wrong_lifetime.stderr
error: lifetime may not live long enough
 --> $DIR/wrong_lifetime.rs:6:5
  |
3 | #[derive(Query)]
  |          ----- lifetime `'q` defined here
...
6 |     bar: &'static mut bool,
  |     ^^^ this usage requires that `'q` must outlive `'static`

error: lifetime may not live long enough
 --> $DIR/wrong_lifetime.rs:9:10
  |
9 | #[derive(Query)]
  |          ^^^^^
  |          |
  |          lifetime `'q` defined here
  |          this usage requires that `'q` must outlive `'static`
  |
  = note: this error originates in the derive macro `Query` (in Nightly builds, run with -Z macro-backtrace for more info)
